# aoc

./: .gitignore  Cargo.toml  example.txt  henrik.py
.devcontainer/: Dockerfile  devcontainer.json
.gitbu/: config  index
.gitbu/logs/: HEAD
aoc/: rustrik.ipynb
aoc/aoc-lib/: Cargo.toml
aoc/day-2022-01/: Cargo.toml
aoc/day-2022-02/: Cargo.toml
aoc/day-2022-03/: Cargo.toml
aoc/day-2022-04/: Cargo.toml
aoc/day-2022-05/: Cargo.toml
aoc/day-2022-06/: Cargo.toml
aoc/day-2022-07/: Cargo.toml
aoc/day-2022-08/: Cargo.toml
aoc/day-2022-09/: Cargo.toml
aoc/day-2022-10/: Cargo.toml
aoc/day-2022-11/: Cargo.toml
aoc/day-2022-12/: Cargo.toml
aoc/day-2023-01/: Cargo.toml
aoc/day-2023-02/: Cargo.toml
aoc/day-2023-03/: Cargo.toml
aoc/day-2023-04/: Cargo.toml
aoc/day-2023-05/: Cargo.toml
aoc/day-2023-06/: Cargo.toml
aoc/day-2023-07/: Cargo.toml
aoc/day-2023-08/: Cargo.toml
aoc/day-2023-09/: Cargo.toml
aoc/day-2023-10/: Cargo.toml  output.txt
aoc/day-2023-11/: Cargo.toml
aoc/day-2023-12/: Cargo.toml
aoc/day-2023-13/: Cargo.toml
aoc/day-2023-14/: Cargo.toml
aoc/day-2023-15/: Cargo.toml
aoc/day-2023-16/: Cargo.toml
aoc/day-2023-17/: Cargo.toml
aoc/day-2023-18/: Cargo.toml
aoc/day-2023-19/: Cargo.toml
aoc/day-2023-20/: Cargo.toml
aoc/day-2023-21/: Cargo.toml
aoc/day-2023-22/: Cargo.toml
aoc/day-2023-23/: Cargo.toml
aoc/day-2023-24/: Cargo.toml
csharp/: .gitignore
lib/: Cargo.toml
uct/: Cargo.toml  data.txt
uct/src/: args.rs  input.rs  main.rs  noregex.rs  regex.rs  units.rs
uct/tests/: integration_tests.rs
(+131 files in other folders)
