[package]
name = "uct"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
regex = "1.11.1"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
assert_fs = "1.1.2"

[[bin]]
name = "uct"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 3